kubernetes/base/infra/cloudflared/resources/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudflared-metrics
  namespace: cloudflared
  labels:
    app: cloudflared
spec:
  selector:
    app: cloudflared
  ports:
    - name: metrics
      port: 2000
      targetPort: metrics
      protocol: TCP
