kubernetes/base/infra/cloudflared/resources/httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: web
  hostnames:
    - argocd.arunanshu.dev
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
